samples/highcharts/studies/a11y-menu/demo.css
#container {
    max-width: 800px;
    margin: 1em auto;
}

#pref-menu-dialog {
    z-index: 9999;
    background-color: white;
    padding: 20px;
    border: 1px solid black;
    border-radius: 5px;
    min-width: 320px;
}

.pref {
    display: flex;
    align-items: center;
    gap: 10px;
}

h3 {
    margin-bottom: 10px;
}

/* To avoid screen reader region disappearing after chart.update() */
.hide-section {
    position: static !important;
    width: auto !important;
    height: auto !important;
    overflow: visible !important;
    white-space: normal !important;
    clip: auto !important;
    margin-top: 0 !important;
    opacity: 1 !important;
}

.highcharts-button-normal:hover,
.highcharts-button-normal-hover {
    cursor: pointer;
}

#small-font {
    font-size: 10px !important;
}

#default-font {
    font-size: 16px !important;
}

#large-font {
    font-size: 22px !important;
}

.alt-text-div {
    position: absolute;
    background: white;
    border: 1px solid #ccc;
    padding: 4px;
    font-size: 12px;
    transform: translate(-50%, -100%);
    pointer-events: none;
}

#hc-pref-button-fallback text {
    font-size: 1.2em !important;
}

#hc-pref-button-fallback rect {
    fill: rgb(255, 255, 255) !important;
    stroke: rgb(255, 255, 255) !important;
}

.hc-pref-button-bg {
    fill: transparent;
    transition: fill 0.2s ease;
    pointer-events: all;
}

.hc-pref-button:hover .hc-pref-button-bg {
    fill: rgb(211, 211, 211) !important;
}

.alt-text-div {
    max-width: 50px;
    border: 1px solid black;
    border-radius: 2px;
}

